   find bars, could not be ignored.
 - Fixed an issue where some in-page scripts would not be disabled.
 - Added a Restore to Default button to the Ignored Textboxes tab of the
   preference panel.
 - Fixed issues where the preference panel would not behave like a normal window
   in Mac OS X. Now the menu bar remains visible, standard key combinations
   work, and AVIM recognizes the panel's Textbox ID textbox.
 - Vinova can now be automatically disabled on webpages via a hidden preference.

Version 20080728.181 (Sunday, August 10, 2008)
 - Added support for Pencil as a standalone application.
 - Fixed the Ignore button, which remained disabled even when the adjacent
   textbox was filled out.

Version 20080728.185 (Tuesday, August 12, 2008)
 - Fixed an issue where adding a tone mark at the end of a word forced the
   entire word to lowercase.
 - Relaxed spelling rules, since the spelling feature is intended to reject only
   words that would be unpronounceable in Vietnamese. "Ka", "ko", and "ku" are
   no longer rejected. Also, "gin`" is allowed again.

Version 20080728.195 (Saturday, August 16, 2008)
 - This CHANGELOG is no longer included in packaged versions of this extension,
   to reduce download size. A history of changes to AVIM can be viewed at the
   project's homepage.
 - Added simplified and traditional Chinese localizations by Karan Misra.
 - Fixed removing diacritics by repeating them (e.g., entering "o^^" should
   produce "o^").
 - Relaxed the spelling rules further, allowing "p" at the beginning of a word.
   By request, "y" is also allowed where "i" would normally be used.
 - Fixed an issue where "uu" ("u+u", "uu+", etc.) in the middle of a word was
   accepted.
 - Fixed typos in the Spanish localization.

Version ${Version} (${Date})
 - Fixed removing diacritics by repeating them, this time for VNI and VIQR.
 - Fixed an issue with VIQR and VIQR* where entering "o```" added the tone mark
   back onto the vowel.